# simple_jpeg

./: .gitignore  CMakeLists.txt  simple_jpeg.cpp  simple_jpeg.hpp
example/: CMakeLists.txt  main.cpp
resource/icc/: display_p3.h  srgb.h
